21_Kubernetes/05_Networking_in_Kubernetes_Part_2/mt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: mt-container
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
