21_Kubernetes/05_Networking_in_Kubernetes_Part_2/ng-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: ng-container
        image: nginx:latest
        ports:
        - containerPort: 80
