21_Kubernetes/05_Networking_in_Kubernetes_Part_2/mt-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mt-service
spec:
  selector:
    app: multitool
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
