21_Kubernetes/05_Networking_in_Kubernetes_Part_2/ng-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ng-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
