21_Kubernetes/05_Networking_in_Kubernetes_Part_2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mt-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ng-service
            port:
              number: 80
